fixing width of images on mobile

--- a/styles.css
+++ b/styles.css
@@ -1182,7 +1182,7 @@
   }
   
   .gallery__mySlides img {
-    width: 350px;
+    width: 380px;
     height: 500px;
     object-fit: cover;
   }
